# ChangeLog for dev-perl/Alien-SDL
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Alien-SDL/ChangeLog,v 1.15 2012/10/24 09:57:57 ago Exp $

  24 Oct 2012; <ago@gentoo.org> Alien-SDL-1.436.0.ebuild:
  Stable for amd64, wrt bug #439118

*Alien-SDL-1.436.0 (06 Aug 2012)

  06 Aug 2012; Torsten Veller <tove@gentoo.org> +Alien-SDL-1.436.0.ebuild:
  Version bump

  09 Jul 2012; Jeroen Roovers <jer@gentoo.org> Alien-SDL-1.434.ebuild:
  Stable for HPPA (bug #424533).

  03 Jul 2012; Agostino Sarubbo <ago@gentoo.org> Alien-SDL-1.434.ebuild:
  Stable for amd64, wrt bug #424533

  03 Jul 2012; Jeff Horelick <jdhore@gentoo.org> Alien-SDL-1.434.ebuild:
  marked x86 per bug 424533

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  02 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Leave the maintaining for games and perl. I can still contribute here if
  required later.

*Alien-SDL-1.434 (02 Jun 2012)

  02 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +Alien-SDL-1.434.ebuild:
  Version bump.

  14 Apr 2012; Markus Meier <maekke@gentoo.org> Alien-SDL-1.430.ebuild:
  x86 stable, bug #408579

  20 Mar 2012; Jeroen Roovers <jer@gentoo.org> Alien-SDL-1.430.ebuild:
  Stable for HPPA (bug #408579).

  20 Mar 2012; Agostino Sarubbo <ago@gentoo.org> Alien-SDL-1.430.ebuild:
  Stable for amd64, wrt bug #408581

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org> Alien-SDL-1.430.ebuild:
  Marked ~hppa (bug #399649).

  21 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Since games is in dev-perl/SDL metadata.xml, it should be here too.

*Alien-SDL-1.430 (21 Jan 2012)

  21 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +Alien-SDL-1.430.ebuild:
  Initial commit (as part of #356535 by Satoshi Hayazaki)