@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Alien-SDL-1.430.tar.gz 339593 SHA256 726b7693edbaebcf639efba5f387f4c22034746d1c90643ea138bb0935928e93 SHA512 0b09446e6e7da052c14e513f2ceeceebb4c2e2a0ea2322397c9c1e4893c07e2946fbe18d4e7ae043cbbf74b562ee5d65c353cdcb3040ea44ae44a4e04ae1b9b8 WHIRLPOOL a31a8158efabe987655bcc8b5bc1656fa5536b41947110a9da06abb9d441736ecc823e488965d032017a529164bc90ba3f1e35ce51728320cc2375322ee1b096
 DIST Alien-SDL-1.434.tar.gz 65106 SHA256 2f6f46acc42ab29e808e5f9d8adfb0ad6a87a29e6b3ba59a712da178105cbe54 SHA512 77ef41fb0d1c784ff21c1b37929ea43b21e1f3cc48da6259dc89f6fb9e42ebf792d1310ff0722b4ea7616471056eff6e52eef1b473574ce7e1096b1952346ca8 WHIRLPOOL 1d6a705c0610e708abf39dc519cfe0e6216539ac88a85742e03e0d07f301bcf63f0f45d4d05dde1cba6fa48facc4eb979680ec108de413f72538ec58644f4f5f
 DIST Alien-SDL-1.436.tar.gz 69045 SHA256 837c8be40f8b327dab908a3efa9b7a49ac4b41e236c56343d419140a56a4bb78 SHA512 5aceb4dcaf0566ff55522bcc4d6373f191baca52cbc393fd91af16d433538101f3fe8a3c2e1e1d8fb8d599a158e3cdb0ee90c6119c85dc66877fe4c06b99a99c WHIRLPOOL d648bd85b76e8a1e3e5b43b6407edb187ed929ce02655982333b9136efa1afe25c0b4f44d8933b917a0ad3742bcd100c54e3e42e91162ff48ec162443d4a63a8
 EBUILD Alien-SDL-1.430.ebuild 882 SHA256 bd5f4dc52c9cafc98cee870f386c55bc18f88a035219c853a6ac737c00ead79b SHA512 8974aa4a554df62bc01072086f96ebe45eea8656e88e26655a45521ae5bd322aaec75dcdc41f07333c90dcae627b7ac2ea1e1cf7676bf1a133736413609d88da WHIRLPOOL 2378e23a08bc8dcc50fe32b56ef68d23df4a7511881cd82f87c6342418034dfb22495a3dc4bac699c344b8e54af05be849671862952d7e000b565abcf7f328ee
 EBUILD Alien-SDL-1.434.ebuild 832 SHA256 7ee3989b5035275558df0c416719984e4ca104903f78c539ac24d31d4c6a6b59 SHA512 e88a45c534574553176fc5f92c232641087d701ceb4d15565a8434261619b3c087c9e8f53b7ee11ff0938fdf26c04346637a47e0e40008890827a710b014d784 WHIRLPOOL 092accb04a272f39a2336f4af3be8abcf0ed4d491222291d7d97e00656f8429601d165ad9f925635c964b0dfcf67d749e894d60647b2b057b0bd35be806feeea
-EBUILD Alien-SDL-1.436.0.ebuild 857 SHA256 2d6a35f2d133c07917738ad7c0d783662737c8096b5432b5acff52b0ee495f55 SHA512 bdb26470e082ad180a720bcf69368a4beca0a3e6883f7da482df20c9a9dcd53d6463afff362947b776fca586cf7c3c7d2fb2a6e568ab12c8f08d4de93ba9b6d5 WHIRLPOOL e7fad7f74cc441e1cfcb3298665a0d3405697b94a04e5cfcc518fea5926e8f2e9643289d1708354db5de34c814a6bc6bd0f6c839f061ccf3199bd3b616e6d8d8
-MISC ChangeLog 1972 SHA256 d9cb5ab36a65c412dabcae3613ec306d8dca65acbd05bb2ae9782e8e2ca67bf4 SHA512 e5100175b9d248f114f646080301fd14a31ca3c6702e7ae70966fc969ac01ebc7221b8c5db42ebf218e014721755cd60e03441ee1b66d97b09299586cab778aa WHIRLPOOL fce74152215aa700198facd3591e6325d18f344c3ca83f42daa5c98d48dd280841d51d2812d84db1be7dbe53915c517c02fb034135e5b67ce19bb11f30da6542
+EBUILD Alien-SDL-1.436.0.ebuild 856 SHA256 8de572e075287fa3fcb16033cef4dd5ec018f7239c2ebf787cb9741d99151cff SHA512 bff335536dfba132f7985b4d077da3674fe210fdfeb2301d5bebf9985dc4be2982057e3c864f32f45d3120c2b3d540b6e3af3946bcab56b053e99fc7d3ae8758 WHIRLPOOL 0b8e6e07b3a99214f91fe313fa8310ab678b8e157c3269fa8f5ded01bf73576dbb96e112be659fc2d3df2035255c036f6bd360b7a8823d4eca621f168ebbb301
+MISC ChangeLog 2079 SHA256 07225a7a71e2e6d86aac73a05c632342893a163752e855f4af98f2157bbbeaaa SHA512 6599b644c6b5893bc609348f4cd606cf955bc0731d16a4a3b7409e6735089171ba68f826b7db0a3aa7b18dbf9eed9fe0366bdf1c758a673a4f551a0cd0aca9a9 WHIRLPOOL 095883a8cfea428849d001a5c53d7aa54f3db44479593c24ae6dafe17b987ac0d523186ff77369b19b19ffc2bb22d59a64be7f76aa1d5798041e104baea81885
 MISC metadata.xml 313 SHA256 883efcfb65c750bbe22f463c76f2ca9b98f86723cfbaaf93601d1bc7d5064fab SHA512 5c33f9c331f129476afa3d943865e0a217ce46399055a7317143710549c2177263735bb3158a8ede141bb104f187631e9d3fce79d50e9091d8097f49a1cb5f1f WHIRLPOOL 784236f4b277b7a31188c8e4797d6d3c8288c223fbde91dd716ba3d98628c01c27f93193e33461d2f007dda166076a7950bacd75939c8a775c54b9ae647bbe37
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlCSFwMACgkQVWmRsqeSphOspgCfe120xzaTFlBwme498o6kqvIT
+V1EAn1cAf4GzhQXMUUm/wtD7cytmjzcn
+=A5UL
+-----END PGP SIGNATURE-----
