@@ -4,13 +4,13 @@ Hash: SHA256
 DIST Crypt-DH-0.06.tar.gz 18088 SHA256 78f14d7c776793655633d5e53e8ebf699e2ae2782c7951130af6f593a32a29c1 SHA512 ebdf22eadaaf74c25f1486410dbb4e006201b7659315f92b1219a2fa8e8c91fa2d697fa010e5df45581ddb41eeb43e49d27d462b1b33abc647ddf5448200064e WHIRLPOOL a0c7f2581c7ccbcd0042e6156d8e3482194a47807c947ceaaf41aac65440495dab1aa2f25f122009208c9ddb8d62cd91a1087eed6519f136ae3889379eb03551
 DIST Crypt-DH-0.07.tar.gz 43736 SHA256 c88cf3423b01e6782e8986d7fe5304436ab84b0925c4498c6fdfa17ef9a37f5f SHA512 60e58403e513535463290255989e9f2263107aeae6831d51d761e18527b1745baa45c16f655452fd618a0fb0e98413d5ed68f3926247ab2ad2da4032863b8ee7 WHIRLPOOL aa50b3788728f358265f478ad564afa7915af3090dd0dde4b56f0ce78126df22b4f6fb83d82335db8e4133294d496b33e865a94cda63c96ee3e5ff0f24783ee7
 EBUILD crypt-dh-0.60.0.ebuild 519 SHA256 1b23e7cb2574425def0f2a4df27bf543f3a55887e14e8fe922b6710c663b5a98 SHA512 febc17780f08bd8443badfd042b1d25de137fa534084df39fc80f777bd8542fe15633da9c5cd53a6841b9238466a2b2a049a16536756af6e8fa56e94f143ca67 WHIRLPOOL 9f9648600fb415f0fdc2efbd1e2f8a3c34bf742879d0bbb724c2854adefe4f1858162cdd4fc51fbada0dd5d4b41bd37b828d2c35650f7d6669a749c0c57aa7bf
-EBUILD crypt-dh-0.70.0.ebuild 545 SHA256 d79afe3541a13da55de0a62869ba2712c24e49ce717951b903b30e95f3098733 SHA512 079df9527075db8a2bbf703cd06dd4db73453481d6a4eaa774c551ddfa66dd856fdb6834f77c88de3c3dc29936eebd8d7de9262d22491f7b36abc611e607fb94 WHIRLPOOL 10257530804e97dfddfd1cafdc2cc17772b660f43ced14ceee0e3488044385e8891ec2f328e9466c48feb71dd7e6be3eed5fbbdab9c6b2d28149ca5f4d55cc6f
-MISC ChangeLog 2841 SHA256 95570b2aea47552f6e5a54dba1cbaf2ed39d5a82dbbd0938445f7fec4afc107c SHA512 8606e3d49dd7d9bb461e360bb18cf898bd9891d6972fcdc37ebcb61b983b398f41734206baf2f8e75f646b38069d7cea602d80d86b12a5f33d68b1cacca1395b WHIRLPOOL 1e6d58fb500cc891a8a3d4f24b8aa8a9d49739d3a290b091f14c544d4654cafb066338cb0689aa70adca3c03c6f7276a77e13ef8f63b7aeb200237302fd4a6f9
+EBUILD crypt-dh-0.70.0.ebuild 540 SHA256 c82c8f3cba97173e49b7a381827f175d2ad2c3cb796583f6d8efcdccb7feffe4 SHA512 82765b603eeff59aa30f92e351b9358bcfad0dbd57dea3dc1f602340902b047ba4699806f6c00ceaddad760f7a89082f5199b0b3be5cacc7a10d99307242e7b4 WHIRLPOOL 85651fb611db250332a80f4c1daed8c608f42f16b3d045e182e7010c2b18ad60b7a57a3755abc08f06a276cfe39a3617ec6412251bd54c97fd645c5ed02aa6c2
+MISC ChangeLog 2942 SHA256 7f9e40b634aee71a5835bd91c9cda26971e6db84c7892f0d9ee524ef891992c7 SHA512 b9ef5b05710e211a74650a9304b9752002f8b10dfc9065c00a08593d6cf33c41baa096186411dd285ac10d07227d49177b8e6795fd3fbc0b01b69163d5f4a6f9 WHIRLPOOL 2edf48abe8ababfce774ebf102794653b8a5b0499832c104131ba11d9cc5e60cb96c94dd252f2bad9870416c38d6b1bb5d637ef775fb0d564a19445bd8a72248
 MISC metadata.xml 290 SHA256 c290769a7f717022c4532e66ce889c7254388b50da0bb7c1fe91936401ff217b SHA512 c8506bde8de42a13f603d77fce5215d225372066cc95021b3de8aa6f7f69f678524ff4447a4d6af24f49cb3de765a4cbcba2593bc0e0340215f21c0f467116fa WHIRLPOOL 86a610ff723b9e597ae87dcc775a64ca0c9065be0dd125b6d951fd5f5321789ef77124c638f373ce7d409f9286f96bb42b12c7c092ad42acdef9db66bfba3206
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlB7CSEACgkQuQc30/atMkAnzwCfcnY5MZv7m9cLFg1G5tEOJNNe
-VvEAn3bavIicaXFSacw6A5hiHIeAKSFz
-=OLCM
+iEYEAREIAAYFAlCRd3wACgkQVWmRsqeSphOi0ACeJTEF0+cIjLgYozMqzur5ceQa
+RgoAn33P0Ex/HHls31KRpCHZnWeBptVF
+=ch5d
 -----END PGP SIGNATURE-----
