@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 50git-gentoo.el 472 SHA256 7cd37e8db7eaeee8d822d38851eb69771b0f09c79883a8e51309a9add85fdbe2 SHA512 0435d7d67f2b64460a62c6a95c65a722c0f8d5d50d064a81e690de84a761ba518d32db545ee70c0fa3ad7803d77d5dab100689888bc92c9d82f2d6d5073623b3 WHIRLPOOL 887682f79182f6728af3c0fd2ee0e81319d49761a987559684be5e4acae4af579a5b8d1197ddba31452cec179de3c8f5784cc85ad61f78b400e42c204c93f642
 AUX git-1.6.6.1-interix6.patch 457 SHA256 a8b788b8ef41ce7fd1018f13795694a908fbb1884de195c89a58fe87f3968849 SHA512 58e63d78d665f9122214ec1b7a8d730f7c9d8938283db98580334e293f46a984b86c8d72fbe48f891eda6d48fc76982857539761c6dcf881b1bb5817c275d263 WHIRLPOOL 803ec2121a7abe018c591c249c2b835aadd114a65b0cf6be4fd6440c77f9282d13b4225e1d63a5b22bb46f058bcd073dc97e801476278a91ff9f82634104f3d8
 AUX git-1.7.1-interix.patch 2192 SHA256 b560fcc41ea93df429290ec645f3e37368ceec1101f7124574fa6d9bab00a495 SHA512 bd02d6c2b83827eb3d286ef37b358c2eb25d453655bebf1d2d074b47e7aab1c3b3f07da21eca33f01ac457d2878b674b2c857f9915ac71438a02bca112c89c41 WHIRLPOOL 7a314149acaa54199a258c1ebd9ee34356fa0393d3d49c994b25a66a593d4214391495d5dd67db01e6b1e396cb6c96b0ddcb7c3d78316bec7fb10af0e7e38af4
@@ -44,5 +47,22 @@ EBUILD git-1.7.2.5.ebuild 13519 SHA256 481145683960e2d32d104d626898f2d71ebaa925a
 EBUILD git-1.7.3.4-r1.ebuild 14028 SHA256 61d5e1bcdf37f4d5cb93e32780642a25352ceec58ad5f418717c9e4ae40138eb SHA512 d9fd0f1e72dbee3e07aeb6d6e736af00f56a999ceb85ea318d65213f3b78879a95e1a2e0fbfcb5988103dd4fcddf34135e826f629e62f98b0a175154c5ba9a3d WHIRLPOOL d9942dd6e7b066f06d1347895f0840d610a402ca611edc044afbd786ef96bc4d87b831e6cd5f87ccf2a49e17f3e805f1559cf03304f2a3af0dbde544b3f33dd0
 EBUILD git-1.7.8.6.ebuild 14683 SHA256 38f21df5f6abefb90ce93129adacf4b307decd48417d6830eced6ec0b595cbd0 SHA512 7ef0bc6125d06100636bfc15fef7d0cacef08f2c9a75beaa7331f1e5c5e06a7cd96f84b0ec975be8fd290efccaf0b9e40edb524063a2a9bfe69870bd2b2c9185 WHIRLPOOL 06ed98a81369963955aafa2186b30fa64ec544f8f1b268c7bb228d83c0e371e70223a69f7ed69da7df47ddc1a10459c40f36e3b2659d9c85c57e0dc036870d9c
 EBUILD git-9999.ebuild 14826 SHA256 c86a750e4410f2f8afbcaf2c7fea33ecf9c083f2600546ef8579a98d387284ba SHA512 5c87dec06b95423b32b5791575c7a058bdb2bd13590f5d956a2f52082b878b46bfce8e9dc032d4faa69628891505558d41e2528ee1ead13c6514dd0c66505f1a WHIRLPOOL 65d9e55afa4edc8ea23a0a69439645d40bd0d675478e98a4e4613df6ef180ed35bc6185cb45dc25d86465deb9c61526c6d735c8582718ece115871ed399bd3ec
-MISC ChangeLog 93762 SHA256 6bbea947311a7d2264f1fbbe55157b3aafdbc30cba50c3dc32681bc58aabd111 SHA512 bca7ccf72da3fd58cca67211d8acaa7148aa0786baf61807e7f097808a4cbb216f318ec3e87b97e3f5c62b7b9bca9e2dbf2ef61863bc0fbe84e1a72315ef95d9 WHIRLPOOL 1fe095ee06776e827c519f824619d792e174c94894797760ff16048e5e1b529adbaa6fd07a17ab78d409db02655906eea288dd26841d87142f86131501e45957
-MISC metadata.xml 1703 SHA256 0160307be371ac78b828108a16577f1e77df9324f7a4ebe8d374cef591facd35 SHA512 ad71dee33463a316c9170df6db10fcab514c0fc6ee7e8ef454faa3294578ae678ffb3c5316f813bce2f2883724108b7f7fb01ee727e1f692b80935f0a29b500e WHIRLPOOL a931afb06f223430e8db9241e0ceda656ec7e137ff51922a1cfb035ac1df137a0faa7bb14b9fe127658c98cb62c7f3a2ef09fb3af6e907da78da94c8b5d9a56d
+MISC ChangeLog 93857 SHA256 a749ecd4e4e95236c73d4dcdb4ebe6dc0c6fcc5c1d144c91aa70b0770d02512e SHA512 b1158a66dc4707ee79f6829f298bfee1f5453d08b7f75d29a0eb8e2f43804b7f6551089b31aad4e87956a40f15c33f04163242d4e49c6d32ac1839caca0493d1 WHIRLPOOL 0999136f040d0c30837f230749b64f251d207beb33536302a4c5f3106d08440c9cde43d5282d6237208fd41bd74023d4ce9142d0ceb35ce27f62bafdfee62c78
+MISC metadata.xml 1821 SHA256 3f0864988fd1d6ca97db612f9157275bf00336143969acb9d82ca6e6523127f5 SHA512 9f2d7adaf973837028f0c7cb305ac9917a88f07490ee172e570fc70860385de5c2b00edd6c22a37c9448d9260f51554e87b32b24e3bbbcc521f9ce5bbcb1fce0 WHIRLPOOL 7c135c44361168708252533d60a05f2c7d4b202c96c212e75d3057fa5ad80928c7d7452359b7e068c7a1f41dd4276c5917ac47ae010ec93821b2a9a3518f7aa9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQkX3MAAoJELEHsLL7fEFWTAkP/A2KpuxDXEafA9uJHLA95Nbn
+SmYZewODoy3+UaisAjURUcv5ohLaQscfy05zV848RcaGRND56lEKnXqkhnlT17Wy
+PM0VIwhC3B5/y38ERln8bUJOm4zNLFrR5onbcjxJ6fcTstQsMxWFpP+5burb5miB
+7dpfp5jECNVkkTzT6VmEEK7kliBHElCm4hUbkMsAfnjB9AzMzJlN0OtCB0jmeEoA
+ZGNlYtYqp7+bBzGyn2CNvq7WwVmB0x7MSCHWx5lub5nYa0qWl3mabwhUNwa5pAQm
+R1ygg3O24lE7GYPqOQ60IcUo9aY84uH977g2v4U8pezW2AH6mti1ZDHsXLcPnxTX
+QHKVe9SOXykfDDjcVeumvmgw3//EHyHNT3CnXJAqm5m2ouqM5fkBFsmpHQxRTUy0
+HcZFGwBZouRcFcJ4kcmsTHtGUdARZfnWWDibM69hOXhU+ShP01UZmrGevrTvQz4n
+8Xb24FPHyu7RuepGWR2M6SaDygHDPwzn9c96ZByYlE/MSf6OumUxRNdTzmCoXDsv
+AYHCZ4q3jKf79qsTZnV/JlZjaB4bN8z6V0BSlM4+Q1xc6+6/3m7vWBPUeTdezxJ3
+2S1ZF7y9p9xFYh8zOjebQwaiLZO7v1iSuESCXbcCB8wuM4a2yzZH3dRFSQMg3tCk
+9ONw5f6OI3JkxYAVhcOB
+=leX5
+-----END PGP SIGNATURE-----
